RESOLVED FIXED156503
There is a race with the compiler thread and the main thread with result profiles
https://bugs.webkit.org/show_bug.cgi?id=156503
Summary There is a race with the compiler thread and the main thread with result prof...
Saam Barati
Reported 2016-04-12 08:44:16 PDT
...
Attachments
patch (4.56 KB, patch)
2016-04-12 09:20 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2016-04-12 09:20:31 PDT
WebKit Commit Bot
Comment 2 2016-04-12 11:38:10 PDT
Comment on attachment 276239 [details] patch Clearing flags on attachment: 276239 Committed r199376: <http://trac.webkit.org/changeset/199376>
WebKit Commit Bot
Comment 3 2016-04-12 11:38:15 PDT
All reviewed patches have been landed. Closing bug.
David Kilzer (:ddkilzer)
Comment 4 2016-04-12 13:32:52 PDT
This caused the Windows Debug builds to fail: <https://build.webkit.org/builders/Apple%20Win%20Debug%20(Build)?numbuilds=50> C:\cygwin\home\buildbot\slave\win-debug\build\Source\JavaScriptCore\bytecode\CodeBlock.cpp(4238): error C2039: 'isLocked': is not a member of 'WTF::NoLock' [C:\cygwin\home\buildbot\slave\win-debug\build\WebKitBuild\Debug\Source\JavaScriptCore\JavaScriptCore.vcxproj] C:\cygwin\home\buildbot\slave\win-debug\build\WebKitBuild\Debug\DerivedSources\ForwardingHeaders\wtf/NoLock.h(33): note: see declaration of 'WTF::NoLock' C:\cygwin\home\buildbot\slave\win-debug\build\Source\JavaScriptCore\bytecode\CodeBlock.cpp(4256): error C2039: 'isLocked': is not a member of 'WTF::NoLock' [C:\cygwin\home\buildbot\slave\win-debug\build\WebKitBuild\Debug\Source\JavaScriptCore\JavaScriptCore.vcxproj] C:\cygwin\home\buildbot\slave\win-debug\build\WebKitBuild\Debug\DerivedSources\ForwardingHeaders\wtf/NoLock.h(33): note: see declaration of 'WTF::NoLock' However, I'm not sure why only Windows Debug builds are failing, and not any other platform.
David Kilzer (:ddkilzer)
Comment 5 2016-04-12 13:38:03 PDT
(In reply to comment #4) > This caused the Windows Debug builds to fail: > > <https://build.webkit.org/builders/ > Apple%20Win%20Debug%20(Build)?numbuilds=50> > > C:\cygwin\home\buildbot\slave\win- > debug\build\Source\JavaScriptCore\bytecode\CodeBlock.cpp(4238): error C2039: > 'isLocked': is not a member of 'WTF::NoLock' > [C:\cygwin\home\buildbot\slave\win- > debug\build\WebKitBuild\Debug\Source\JavaScriptCore\JavaScriptCore.vcxproj] > > C:\cygwin\home\buildbot\slave\win- > debug\build\WebKitBuild\Debug\DerivedSources\ForwardingHeaders\wtf/NoLock. > h(33): note: see declaration of 'WTF::NoLock' > C:\cygwin\home\buildbot\slave\win- > debug\build\Source\JavaScriptCore\bytecode\CodeBlock.cpp(4256): error C2039: > 'isLocked': is not a member of 'WTF::NoLock' > [C:\cygwin\home\buildbot\slave\win- > debug\build\WebKitBuild\Debug\Source\JavaScriptCore\JavaScriptCore.vcxproj] > > C:\cygwin\home\buildbot\slave\win- > debug\build\WebKitBuild\Debug\DerivedSources\ForwardingHeaders\wtf/NoLock. > h(33): note: see declaration of 'WTF::NoLock' > > However, I'm not sure why only Windows Debug builds are failing, and not any > other platform. And 32-bit JSC (BuildAndTest) and LLInt CLoop (BuildAndTest) also fail to build due to the same error: <https://build.webkit.org/builders/Apple%20El%20Capitan%2032-bit%20JSC%20(BuildAndTest)?numbuilds=50> <https://build.webkit.org/builders/Apple%20El%20Capitan%20LLINT%20CLoop%20(BuildAndTest)?numbuilds=50> <https://build.webkit.org/builders/Apple%20Yosemite%2032-bit%20JSC%20(BuildAndTest)?numbuilds=50> <https://build.webkit.org/builders/Apple%20Yosemite%20LLINT%20CLoop%20(BuildAndTest)?numbuilds=50> /Volumes/Data/slave/elcapitan-cloop-debug/build/Source/JavaScriptCore/bytecode/CodeBlock.cpp:4238:19: error: no member named 'isLocked' in 'WTF::NoLock' /Volumes/Data/slave/elcapitan-cloop-debug/build/Source/JavaScriptCore/bytecode/CodeBlock.cpp:4256:19: error: no member named 'isLocked' in 'WTF::NoLock'
Saam Barati
Comment 6 2016-04-12 13:48:25 PDT
Build should be fixed by: http://trac.webkit.org/changeset/199384
David Kilzer (:ddkilzer)
Comment 7 2016-04-13 20:23:28 PDT
Note You need to log in before you can comment on or make changes to this bug.